Updates for release 5.0.10

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
         },
         "zep": {
             "repo": "zenoss/zenoss-zep",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenSQLTx": {
             "repo": "zenoss/ZenPacks.zenoss.ZenSQLTx",
@@ -31,7 +31,7 @@
         },
         "golang/src/github.com/zenoss/metricshipper": {
             "repo": "zenoss/metricshipper",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.BigIpMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.BigIpMonitor",
@@ -75,7 +75,7 @@
         },
         "core": {
             "repo": "zenoss/zenoss-prodbin",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.vSphere": {
             "repo": "zenoss/ZenPacks.zenoss.vSphere",
@@ -179,12 +179,12 @@
         },
         "service": {
             "repo": "zenoss/zenoss-service",
-            "ref": "support/5.0.x",
+            "ref": "release/5.0.10",
             "name": "service"
         },
         "../build": {
             "repo": "zenoss/platform-build",
-            "ref": "support/5.0.x",
+            "ref": "release/5.0.10",
             "name": "build"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CheckPointMonitor": {
@@ -205,7 +205,7 @@
         },
         "protocols": {
             "repo": "zenoss/zenoss-protocols",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.StorageBase": {
             "repo": "zenoss/ZenPacks.zenoss.StorageBase",
@@ -217,7 +217,7 @@
         },
         "metric-service": {
             "repo": "zenoss/query",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "zenpacks/ZenPacks.zenoss.NtpMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.NtpMonitor",
@@ -241,7 +241,7 @@
         },
         "utils": {
             "repo": "zenoss/zenoss-utils",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "zenpacks/ZenPacks.zenoss.DnsMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.DnsMonitor",
@@ -249,7 +249,7 @@
         },
         "zauth-service": {
             "repo": "zenoss/zauth-service",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "zenpacks/ZenPacks.zenoss.DellMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.DellMonitor",
@@ -273,7 +273,7 @@
         },
         "zproxy": {
             "repo": "zenoss/zproxy",
-            "ref": "support/5.0.x"
+            "ref": "release/5.0.10"
         },
         "metric-consumer": {
             "repo": "zenoss/zenoss.metric.consumer",
