--- a/manifest.json
+++ b/manifest.json
@@ -201,7 +201,7 @@
         },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseCollector": {
             "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector",
-            "ref": "1.6.2"
+            "ref": "support/5.1.x"
         },
         "protocols": {
             "repo": "zenoss/zenoss-protocols",
