ZEN-22495: Add SupportBundle ZenPack to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -342,6 +342,10 @@
         "zenpacks/ZenPacks.zenoss.InstalledTemplatesReport": {
             "repo": "zenoss/ZenPacks.zenoss.InstalledTemplatesReport",
             "ref": "1.1.0"
+        },
+        "enterprise_zenpacks/ZenPacks.zenoss.SupportBundle": {
+            "repo": "zenoss/ZenPacks.zenoss.SupportBundle",
+            "ref": "develop"
         }
     }
 }
